# drifting_car

./: .gitignore  README.md
QPlib/: CPLEXsolver.cpp  CPLEXsolver.h  CPLEXsolver_cwrapper.cpp  MPCsolver.h  Makefile  main.cpp
QPlib/util/: writeMatlabScript.cpp  writeMatlabScript.h
ROS/: .gitignore
ROS/ags_controller/: CMakeLists.txt  package.xml
ROS/aster_msgs/: CMakeLists.txt  package.xml
ROS/beta_estimator/: CMakeLists.txt  package.xml
ROS/beta_estimator_acceleration_driftingcar/: CMakeLists.txt  beta_estimator_acceleration_driftingcar.cpp  beta_estimator_acceleration_driftingcar.h  beta_estimator_acceleration_driftingcar_data.cpp  beta_estimator_acceleration_driftingcar_private.h  beta_estimator_acceleration_driftingcar_types.h  defines.txt  ert_main.cpp  package.xml  rtmodel.h  (+5 more)
ROS/drifting_optitrack/src/: CMakeLists.txt  dummyserver_node.cpp  mocap_datapackets.cpp  mocap_node.cpp  socket_multicast.cpp  socket_unicast.cpp
arduino/: FIR_filter.cpp  FIR_filter.h  car_commands.h  constant.h  drifting_car_arduino.cpp  drifting_car_arduino.h  encoder.cpp  encoder.h  receiver.cpp  receiver.h  task_timer.h  telemetry.cpp  telemetry.h
arduino_ethernet/: constant.h  drifting_car_ethernet.cpp  drifting_car_ethernet.h  encoder.cpp  encoder.h  task_timer.cpp  task_timer.h  telemetry.cpp  telemetry.h  udp_socket.cpp  udp_socket.h
arduino_serial/: car_commands.cpp  constant.h  drifting_car_serial.cpp  drifting_car_serial.h  encoder.cpp  encoder.h  receiver.cpp  task_timer.cpp  telemetry.cpp  telemetry.h  telemetryProtocol.cpp  telemetryProtocol.h  type.h
(+556 files in other folders)
